ivisible menu fix

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -104,6 +104,7 @@ nav {
 
 		@media #{$mid-point} {
 			display: block;
+			height: 0px;
 		}
 	}
 
